<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dip"
    >
    <LinearLayout
        android:id="@+id/list_showmaparea"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:src="@drawable/icon_map_w_32"
            ></ImageView>
            <Button
                android:id="@+id/list_showmap"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_gravity="left"
                android:textColor="#ffffff"
                android:textSize="20dip"
                android:text="@string/capdialog_showmapbutton"
                android:padding="5dip"
                android:background="@android:drawable/list_selector_background"
            >
            </Button>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:paddingTop="2dip"
            android:paddingBottom="2dip"
            android:src="@android:drawable/divider_horizontal_dim_dark"
        ></ImageView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_viewdataarea"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:src="@drawable/icon_note_w_32"
            ></ImageView>
            <Button
                android:id="@+id/list_viewdata"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_gravity="left"
                android:textColor="#ffffff"
                android:textSize="20dip"
                android:text="@string/capdialog_viewdatabutton"
                android:padding="5dip"
                android:background="@android:drawable/list_selector_background"
            >
            </Button>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:paddingTop="2dip"
            android:paddingBottom="2dip"
            android:src="@android:drawable/divider_horizontal_dim_dark"
        ></ImageView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_changearea"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:src="@drawable/icon_pencil_32_w"
            ></ImageView>
            <Button
                android:id="@+id/list_changedata"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_gravity="left"
                android:textColor="#ffffff"
                android:textSize="20dip"
                android:text="@string/capdialog_changedatabutton"
                android:padding="5dip"
                android:background="@android:drawable/list_selector_background"
            >
            </Button>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:paddingTop="2dip"
            android:paddingBottom="2dip"
            android:src="@android:drawable/divider_horizontal_dim_dark"
        ></ImageView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_selectarea"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/list_selectdataimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:src="@drawable/icon_check_w_32"
            ></ImageView>
            <Button
                android:id="@+id/list_selectdata"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_gravity="left"
                android:textColor="#ffffff"
                android:textSize="20dip"
                android:text="@string/capdialog_selectdatabutton"
                android:padding="5dip"
                android:background="@android:drawable/list_selector_background"
            >
            </Button>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:paddingTop="2dip"
            android:paddingBottom="2dip"
            android:src="@android:drawable/divider_horizontal_dim_dark"
        ></ImageView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/list_deletearea"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:src="@drawable/icon_trash_w_32"
            ></ImageView>
            <Button
                android:id="@+id/list_deletedata"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_gravity="left"
                android:textColor="#ffffff"
                android:textSize="20dip"
                android:text="@string/capdialog_deletedatabutton"
                android:padding="5dip"
                android:background="@android:drawable/list_selector_background"
            >
            </Button>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:paddingTop="2dip"
            android:paddingBottom="2dip"
            android:src="@android:drawable/divider_horizontal_dim_dark"
        ></ImageView>
    </LinearLayout>
</LinearLayout>
