<?xml version="1.0" encoding="utf-8"?>
<!--登録画面レイアウト-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registframe"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill"
    android:background="#ffffffff">
    <TextView
        android:id="@+id/registtime"
        android:layout_width="fill_parent"
        android:layout_height="25dip"
        android:layout_gravity="center"
        android:background="@android:drawable/list_selector_background"
        android:textColor="#333333"
        android:textSize="14dip"
        android:visibility="gone"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
    ></TextView>
    <LinearLayout
        android:id="@+id/maparea"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:gravity="left"
        >
        <LinearLayout
            android:id="@+id/mapbtnarea"
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="left"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/txtcapDefLocationmsg"
                android:textColor="#333333"
                android:textSize="14dip"
                android:id="@+id/mapcaption"
                android:padding="5dip"
                android:minHeight="40dip"
                android:layout_weight="1"
            ></TextView>
            <ImageButton
                android:id="@+id/searchlocationbtn"
                android:layout_width="80dip"
                android:layout_height="40dip"
                android:layout_gravity="right"
                android:padding="5dip"
                android:src="@drawable/icon_map_32"
                android:background="@android:drawable/list_selector_background"
            ></ImageButton>
        </LinearLayout>
        <EditText
            android:id="@+id/maptext"
            android:layout_gravity="top"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:singleLine="False"
            android:layout_weight="1"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tagarea"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:orientation="horizontal"
        android:gravity="left"
        android:paddingBottom="5dip"
        android:paddingRight="5dip"
        >
        <TextView
            android:text="@string/txtcapInputTag"
            android:layout_height="25dip"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="#333333"
            android:background="@android:drawable/list_selector_background"
            android:textSize="14dip"
            android:textStyle="bold"
            android:id="@+id/tagcap"
            android:paddingLeft="5dip"
            android:paddingBottom="5dip"
            android:gravity="left|center_vertical"
        ></TextView>
        <TextView
            android:id="@+id/tagtext"
            android:layout_width="fill_parent"
            android:layout_height="25dip"
            android:layout_gravity="center"
            android:background="@android:drawable/list_selector_background"
            android:textColor="#0000ff"
            android:textSize="14dip"
            android:gravity="left|center_vertical"
            android:paddingLeft="5dip"
            android:paddingBottom="5dip"
    ></TextView>
    </LinearLayout>
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:paddingTop="0dip"
        android:paddingBottom="5dip"
        android:src="@android:drawable/divider_horizontal_bright"
    ></ImageView>
    <LinearLayout
        android:id="@+id/atattcharea"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:gravity="left"
        android:paddingTop="3dip"
        >
        <ImageButton
            android:id="@+id/filemanagebtn"
            android:layout_width="60dip"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:src="@drawable/icon_insertpic_32"
            android:background="@android:drawable/list_selector_background"
        ></ImageButton>
        <TextView
            android:text="@string/txtcapDefAtattchedFile"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textColor="#333333"
            android:textSize="12dip"
            android:id="@+id/atattchtext"
            android:padding="5dip"
        ></TextView>
        <LinearLayout
            android:id="@+id/attatchbtnarea"
            android:background="#00000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="right"
            >
            <ImageButton
                android:id="@+id/attatchbtn"
                android:layout_width="80dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:padding="5dip"
                android:src="@drawable/icon_attach_32"
                android:background="@android:drawable/list_selector_background"
            ></ImageButton>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:paddingTop="5dip"
        android:paddingBottom="0dip"
        android:src="@android:drawable/divider_horizontal_bright"
    ></ImageView>
    <LinearLayout
        android:id="@+id/commentarea"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_weight="1"
        android:padding="5dip"
    >
        <TextView
            android:text="@string/txtcapInputComment"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="top"
            android:textColor="#333333"
            android:textSize="14dip"
            android:id="@+id/commentcaption"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:textStyle="bold"
        ></TextView>
        <EditText
            android:id="@+id/comment"
            android:layout_gravity="top"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text=""
            android:singleLine="False"
            android:gravity="left"
            android:layout_weight="1"
        />
    </LinearLayout>
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:paddingTop="0dip"
        android:paddingBottom="5dip"
        android:src="@android:drawable/divider_horizontal_bright"
    ></ImageView>
    <LinearLayout
        android:id="@+id/confirmbtnarea"
        android:background="#00000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingTop="5dip"
        >
        <ImageView
            android:id="@+id/twitimg"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/icon_twit_16"
            android:paddingRight="5dip"
            android:visibility="gone"
        ></ImageView>
        <ImageButton
            android:id="@+id/twitbtn"
            android:layout_width="100dip"
            android:layout_height="45dip"
            android:layout_gravity="right|center_vertical"
            android:gravity="right|center_vertical"
            android:src="@drawable/icon_twit_32"
            android:paddingRight="5dip"
            android:background="@android:drawable/list_selector_background"
        ></ImageButton>
        <ImageButton
            android:id="@+id/confirmbtn"
            android:layout_width="100dip"
            android:layout_height="45dip"
            android:layout_gravity="center"
            android:src="@drawable/icon_confirm_32"
            android:background="@android:drawable/list_selector_background"
        ></ImageButton>
    </LinearLayout>
</LinearLayout>
